force-app/main/default/objects/NBA_Multiplier_Config__mdt/NBA_Multiplier_Config__mdt.object-meta.xml
<CustomObject>
    <label>NBA Multiplier Config</label>
    <pluralLabel>NBA Multiplier Configs</pluralLabel>
    <description>Configuration for NBA Queue priority score multipliers</description>
</CustomObject>