force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Best_Time_Description__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_Description__c</fullName>
    <label>Best Time Description</label>
    <type>Text</type>
    <length>100</length>
    <defaultValue>"Best Time (1.2x) - ±30 minutes"</defaultValue>
</CustomField>