force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Best_Time_Label__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_Label__c</fullName>
    <label>Best Time Label</label>
    <type>Text</type>
    <length>50</length>
    <defaultValue>Best Time</defaultValue>
    <description>Display label for best time to call multiplier in UI and reports</description>
    <inlineHelpText>Customize the label shown for best time multiplier (e.g., "Optimal Timing", "Call Window")</inlineHelpText>
</CustomField>