force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Best_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_Minutes__c</fullName>
    <label>Best Time Minutes</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>30</defaultValue>
    <description>Minutes tolerance for best time to call multiplier</description>
    <inlineHelpText>How many minutes before/after best time to apply multiplier (e.g., 30 = ±30 minutes)</inlineHelpText>
</CustomField>