force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates if this multiplier configuration is active</description>
    <inlineHelpText>Only one configuration should be active at a time</inlineHelpText>
</CustomField>