force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/ProgressDisplayName__c.field-meta.xml
<CustomField>
    <fullName>ProgressLabel__c</fullName>
    <label>Progress Label</label>
    <type>Text</type>
    <length>50</length>
    <defaultValue>Progression</defaultValue>
    <description>Display label for progression multiplier in UI and reports</description>
    <inlineHelpText>Customize the label shown for progress multiplier (e.g., "Sales Activity", "Recent Movement")</inlineHelpText>
</CustomField>