force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier1_Days__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier1_Days__c</fullName>
    <label>Progression Tier 1 Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>7</defaultValue>
    <description>Days threshold for Tier 1 progression multiplier</description>
    <inlineHelpText>How many days back to apply Tier 1 progression multiplier</inlineHelpText>
</CustomField>