force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier1_Description__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier1_Description__c</fullName>
    <label>Progression Tier 1 Description</label>
    <type>Text</type>
    <length>100</length>
    <defaultValue>"Progression (1.5x) - Last 7 days"</defaultValue>
</CustomField>