force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier1_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier1_Multiplier__c</fullName>
    <label>Progression Tier 1 Multiplier</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <defaultValue>1.5</defaultValue>
    <description>Multiplier for most recent progression (highest tier)</description>
    <inlineHelpText>Enter multiplier value for most recent progression tier</inlineHelpText>
</CustomField>