force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier2_Days__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier2_Days__c</fullName>
    <label>Progression Tier 2 Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>30</defaultValue>
    <description>Days threshold for Tier 2 progression multiplier</description>
    <inlineHelpText>How many days back to apply Tier 2 progression multiplier (must be greater than Tier 1)</inlineHelpText>
</CustomField>