force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier2_Description__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier2_Description__c</fullName>
    <label>Progression Tier 2 Description</label>
    <type>Text</type>
    <length>100</length>
    <defaultValue>Progression (1.2x) - Last 30 days</defaultValue>
</CustomField>