force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier2_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier2_Multiplier__c</fullName>
    <label>Progression Tier 2 Multiplier</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <defaultValue>1.2</defaultValue>
    <description>Multiplier for moderate recent progression (middle tier)</description>
    <inlineHelpText>Enter multiplier value for moderate recent progression tier</inlineHelpText>
</CustomField>