force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier3_Days__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier3_Days__c</fullName>
    <label>Progression Tier 3 Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>90</defaultValue>
    <description>Days threshold for Tier 3 progression multiplier</description>
    <inlineHelpText>How many days back to apply Tier 3 progression multiplier (must be greater than Tier 2)</inlineHelpText>
</CustomField>