force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Progression_Tier3_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Progression_Tier3_Multiplier__c</fullName>
    <label>Progression Tier 3 Multiplier</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <defaultValue>1.1</defaultValue>
    <description>Multiplier for older progression (lowest tier)</description>
    <inlineHelpText>Enter multiplier value for older progression tier (set to 1.0 to disable)</inlineHelpText>
</CustomField>