force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Web_Usage_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Usage_Description__c</fullName>
    <label>Web Usage Description</label>
    <type>Text</type>
    <length>100</length>
    <defaultValue>"Web Usage (1.25x) - Last 1 hour"</defaultValue>
</CustomField>