force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Web_Usage_Hours__c.field-meta.xml
<CustomField>
    <fullName>Web_Usage_Hours__c</fullName>
    <label>Web Usage Hours</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <description>Number of hours to look back for web usage multiplier</description>
    <inlineHelpText>How many hours back to check for recent web usage (e.g., 1 = last hour, 24 = last day)</inlineHelpText>
</CustomField>