force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Web_Usage_Label__c.field-meta.xml
<CustomField>
    <fullName>Web_Usage_Label__c</fullName>
    <label>Web Usage Label</label>
    <type>Text</type>
    <length>50</length>
    <defaultValue>Web Usage</defaultValue>
    <description>Display label for web usage multiplier in UI and reports</description>
    <inlineHelpText>Customize the label shown for web usage multiplier (e.g., "Platform Activity", "Recent Engagement")</inlineHelpText>
</CustomField>