force-app/main/default/objects/NBA_Multiplier_Config__mdt/fields/Web_Usage_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Web_Usage_Multiplier__c</fullName>
    <label>Web Usage Multiplier</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <defaultValue>1.25</defaultValue>
    <description>Multiplier applied for recent web usage (e.g., 1.25 = 25% boost)</description>
    <inlineHelpText>Enter multiplier value (1.0 = no boost, 1.25 = 25% boost, 2.0 = 100% boost)</inlineHelpText>
</CustomField>